# encoder-substrait

./: .gitmodules  README.md  buf.gen.yaml
python/: pyproject.toml
python/encoder-substrait/: annotations.py  protocol.py  transport.py
python/encoder-substrait/substrait/: algebra_pb2.py
python/resources/: sample-query.sql  sample-schema.sql
